--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animate_do: ^3.1.2
+  cloud_firestore: ^4.13.6
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.24.2
   flutter:
     sdk: flutter
   get: ^4.6.6
@@ -38,6 +40,7 @@ dependencies:
   url_launcher: ^6.2.1
 
 dev_dependencies:
+  change_app_package_name: ^1.1.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
