Modulos completados, incluyendo la visualización de vídeo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "C:/Users/Francisco/Desktop/history_app/linux"
+    "cmake.sourceDirectory": "C:/Users/Francisco/Desktop/history_app/linux",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
